name:               package-example
version:            0.0.1
license:            BSD3
license-File:       ../etc/LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Copyright (C) 2010-2013 Tony Morris
synopsis:           A skeleton for example usage of haskell packages
category:           Development
description:        A skeleton for example usage of haskell packages
homepage:           https://github.com/tonymorris/haskell-package
bug-reports:        https://github.com/tonymorris/haskell-package/issues
cabal-version:      >= 1.10
build-type:         Simple

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/haskell-package.git

flag                small_base
  description:      Choose the new, split-up base package.

executable          package-example
  default-language:
                    Haskell2010

  hs-source-dirs:
                    ../src src

  main-is:
                    Main.hs

  ghc-options:
                    -O2
                    -Wall

  build-depends:
                    base < 5 && >= 3

  ghc-options:
                   -Wall
                   -O2
